# jinja-text-generation

./: README.md  pyproject.toml  table1.json
jinja_text_generation/: narrate.py
jinja_text_generation/filters/: pprint.py  table.py
jinja_text_generation/templates/: table-variant.txt  table.txt
