[tool.poetry]
name = "jinja-text-generation"
version = "0.1.0"
description = ""
authors = ["Axel Vanraes <axel.vanraes@tiro.health>"]
readme = "README.md"
packages = [{include = "jinja_text_generation"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
click = "^8.1.4"
pydantic = "^2.0.2"

[tool.poetry.scripts]
narrate = "jinja_text_generation.narrate:cli"


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
strict_optional = true
implicit_reexport = false
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true
cache_dir = ".mypy_cache"
python_version = "3.11"
platform = "linux"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

