[tool.poetry]
name = "jinja-text-generation"
version = "0.1.0"
description = ""
authors = ["Axel Vanraes <axel.vanraes@tiro.health>"]
readme = "README.md"
packages = [{include = "jinja_text_generation"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
click = "^8.1.4"
pydantic = "^2.0.2"

[tool.poetry.scripts]
narrate = "jinja_text_generation.narrate:cli"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

